--- a/src/style.scss
+++ b/src/style.scss
@@ -195,7 +195,6 @@ header {
   aspect-ratio: 1;
   object-fit: cover;
   margin-bottom: 10px;
-  // background-color: orange;
 }
 .prodInfo {
   .productName {
@@ -258,6 +257,6 @@ header {
   margin: 50px 0;
   text-align: center;
 }
-.prodListone {
+.product {
   margin-bottom: 100px;
 }
