--- a/src/style.scss
+++ b/src/style.scss
@@ -16,7 +16,9 @@ html, body {
 .mycontainer {
   padding: 50px 0 0;
 }
-
+section {
+  padding: 50px 0;
+}
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
@@ -259,4 +261,28 @@ header {
 }
 .product {
   margin-bottom: 100px;
+}
+.notyet {
+  padding: 50px 0;
+}
+.linkwrap {
+  border-radius: 10px;
+  overflow: hidden;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  margin-top: -20px;
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 50%;
+    height: 100%;
+    color: #333;
+    font-size: 26px;
+    img {
+      width: 100%;
+    }
+  }
 }
