--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,33 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
 
+
+.fs-h1 {
+  font-size: 2.125rem; /* 34px */
+  font-weight: bold;
+}
+.fs-h2 {
+  font-size: 1.625rem; /* 26px */
+  font-weight: bold;
+}
+.fs-h3 {
+  font-size: 1.375rem; /* 22px */
+  font-weight: bold;
+}
+.fs-h4 {
+  font-size: 1.125rem; /* 18px */
+  font-weight: 500;
+}
+.fs-h5 {
+  font-size: 1rem; /* 16px */
+  font-weight: 500;
+}
+.fs-h6 {
+  font-size: 0.875rem; /* 14px */
+  font-weight: 500;
+}
+
+
 ol, ul, li {
   list-style: none;
   margin: 0;
@@ -421,3 +448,50 @@ header {
     font-weight: 500;
   }
 }
+
+
+footer{
+  width: 100%;
+  min-height: 21.875rem;
+  padding: 2.725rem 0;
+  gap: 3.125rem;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #214AEE;
+  color: #fff;
+
+  h3{
+    margin-bottom: 10px;
+  }
+
+  @media (max-width: 991px){
+      h1{
+        order: 4;
+      }
+  }
+  
+  a{
+    transition: 0.3s ease-out;
+
+    &:hover{
+      opacity: 0.7;
+    }
+  }
+}
+
+
+.logo-white{
+  fill: #fff !important;
+}
+
+.ftinfo{
+  display: flex;
+  align-items: center;
+  gap: 1.25rem;
+}
+
+
+.ftinfo-bold{
+  font-weight: bold;
+}
+
