상품데이터, 헤더수정

--- a/src/style.scss
+++ b/src/style.scss
@@ -112,11 +112,12 @@ svg {
       justify-content: space-between;
       padding: 0 150px;
     }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       flex-direction: row;
       justify-content: center;
       height: 60px;
       min-height: unset;
+      padding: 0;
     }
     .hdtop {
       padding-right: calc((100vw - 1320px) / 2);
@@ -130,10 +131,11 @@ svg {
         padding-right: 0;
         width: inherit;
       }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         padding-right: 0;
         width: 100%;
         height: 60px;
+        gap: unset;
       }
       h1 {
         position: absolute;
@@ -148,16 +150,13 @@ svg {
           width: auto;
         }
 
-        @media (max-width: 992px) {
+        @media (max-width: 991px) {
           position: unset;
           transform: unset;
           width: unset;
         }
         svg {
-          height: 44px;
-          @media (max-width: 992px) {
-            display: block;
-          }
+          height: 40px;
         }
       }
       .mobileallmenu {
@@ -179,7 +178,7 @@ svg {
       @media (max-width: 1699px) {
         display: none;
       }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         display: none;
       }
       .mainmenu {
@@ -235,7 +234,7 @@ header {
   @media (max-width: 991px){
     height: 60px;
     svg{
-      height: 30px;
+      height: 40px;
     }
   }
   .hdtop {
@@ -368,9 +367,6 @@ header {
   100% {
     transform: translateY(-2px);
   }
-}
-.productwrap {
-  gap: 20px;
 }
 .prodimg {
   width: 100%;
