메인에서 추가 작업했던 것

--- a/src/style.scss
+++ b/src/style.scss
@@ -534,9 +534,22 @@ footer{
   background-color: #214AEE;
   color: #fff;
 
-  h3{
-    margin-bottom: 10px;
+  div {
+    h3 {
+      margin-bottom: 11px;
+    }
+
+    &:nth-child(3) {
+      h3 {
+        margin-bottom: 10px;
+      }
+      span{
+        margin-top: 5px;
+      }
+    }
   }
+  
+  
 
   @media (max-width: 991px){
       h1{
@@ -544,7 +557,7 @@ footer{
       }
   }
   
-  a{
+  a.linkIcon{
     transition: 0.3s ease-out;
 
     &:hover{
