--- a/src/style.scss
+++ b/src/style.scss
@@ -83,6 +83,14 @@ svg {
   color: #fff;
 }
 
+.border-lighter {
+  border-width: 2px !important;
+}
+
+.border-none {
+  border: none !important;
+}
+
 .top-ad {
   width: 100%;
   background-color: #214aee;
@@ -103,6 +111,7 @@ svg {
     min-height: 65px;
     flex-direction: row-reverse;
     justify-content: space-between;
+    z-index: 1000;
     @media (max-width: 1799px) {
       justify-content: center;
       gap: 60px;
@@ -464,8 +473,8 @@ header {
   }
 }
 .tempimg {
-  width: 500px;
-  height: 500px;
+  width: 572px;
+  height: 572px;
   background-color: #bd822a;
 }
 .totalQuan {
@@ -581,3 +590,125 @@ footer{
   font-weight: bold;
 }
 
+.nav-link {
+  color: #666;
+  font-weight: 500;
+  font-size: 22px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 2px solid #d2d2d2;
+  &.active {
+    color: #333;
+    font-weight: 700;
+    border-bottom: 3px solid #214AEE;
+  }
+}
+
+.prodInfoDetail {
+  @media (max-width: 1199px){
+    flex-direction: column;
+  }
+}
+
+.detailsect {
+  position: relative;
+}
+  .image-container {
+    width: 1320px;
+    height: 2000px;
+    overflow: hidden;
+    transition: height 0.3s ease-out;
+
+    .product-image {
+      width: 100%;
+      transition: height 0.3s ease-out;
+    }
+
+    &.expanded {
+      height: max-content;
+
+      .product-image {
+        height: 100%;
+      }
+    }
+  }
+
+  .morebtn {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    height: 45px;
+    padding: 0 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    border: 3px solid #214AEE;
+    background: #FFF;
+  }
+
+  .bestReviewcont {
+    display: flex;
+    padding: 25px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 10px;
+    border: 2px solid #214AEE;
+    width: 100%;
+    .contTop {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      align-self: stretch;
+      .bestreviewbadge {
+        display: flex;
+        height: 20px;
+        min-width: 85px;
+        padding: 10px 20px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 100px;
+        background: #FF4A11;
+        }
+    }
+    .contBot {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      align-content: flex-start;
+      flex-wrap: wrap;
+      align-self: stretch;
+      ul {
+        text-align: left;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        color: #AAA;
+        font-family: Pretendard;
+        font-size: 18px;
+        font-weight: 500;
+        li:nth-child(2) {
+          color: #666;
+          height: 84px;
+          margin-bottom: 16px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 4;
+          
+          display: box;
+          box-orient: vertical;
+          line-clamp: 4;
+        }
+      }
+    }
+  }
