--- a/src/style.scss
+++ b/src/style.scss
@@ -616,7 +616,7 @@ footer{
   position: relative;
 }
   .image-container {
-    width: 1320px;
+    width: 100%;
     height: 2000px;
     overflow: hidden;
     transition: height 0.3s ease-out;
@@ -670,12 +670,17 @@ footer{
         display: flex;
         height: 20px;
         min-width: 85px;
-        padding: 10px 20px;
+        padding: 0 20px;
         justify-content: center;
         align-items: center;
+        text-align: center;
         gap: 10px;
         border-radius: 100px;
         background: #FF4A11;
+        color: #fff;
+        line-height: 1;
+        font-size: 18px;
+        font-weight: 500;
         }
     }
     .contBot {
@@ -687,25 +692,27 @@ footer{
       align-self: stretch;
       ul {
         text-align: left;
-        width: 50%;
+        // width: 50%;
         display: flex;
         flex-direction: column;
-        gap: 15px;
+        justify-content: space-between;
+        align-self: stretch;
         color: #AAA;
         font-family: Pretendard;
         font-size: 18px;
         font-weight: 500;
         li:nth-child(2) {
           color: #666;
-          height: 84px;
-          margin-bottom: 16px;
-          text-overflow: ellipsis;
-          overflow: hidden;
+          text-align: justify;
+          display: block;
           display: -webkit-box;
           -webkit-box-orient: vertical;
           -webkit-line-clamp: 4;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          line-height: 1.2;
+          max-height: calc(1.2em * 4);
           
-          display: box;
           box-orient: vertical;
           line-clamp: 4;
         }
