--- a/src/style.scss
+++ b/src/style.scss
@@ -724,3 +724,55 @@ footer{
       }
     }
   }
+
+.swiper-wrapper {
+  position: relative;
+}
+
+.swiper-pagination {
+  display: grid;
+  height: 300px;
+  background: rgba(255, 255, 255, 0.5);
+  width: auto !important;
+  top: 50% !important;
+  left: calc((100vw - 1320px) / 4) !important;
+  transform: translate(-50%, -50%);
+  bottom: unset !important;
+  border-radius: 1.25rem;
+  overflow: hidden;
+  backdrop-filter: blur(10px);
+}
+
+.swiper-pagination-bullet {
+  width: 150px;
+  height: 100%;
+  text-align: center;
+  color: #333;
+  opacity: 0.8;
+  background: transparent;
+  border-radius: 0;
+  margin: 0 !important;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 42px;
+  user-select: none;
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #214AEE;
+  opacity: 1;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+@media (max-width: 1800px) {
+  .swiper-pagination {
+    display: flex;
+    height: auto;
+    top: unset !important;
+    bottom: 0.5rem !important;
+    left: 50% !important;
+    transform: translateX(-50%);
+  }
+}
