--- a/src/style.scss
+++ b/src/style.scss
@@ -363,12 +363,12 @@ header {
     }
   }
 }
-.swiper-slide {
-  width: 1920px;
-  img {
-    width: 100%;
-  }
-}
+// .swiper-slide {
+//   width: 1920px;
+//   img {
+//     width: 100%;
+//   }
+// }
 @keyframes boorung {
   0% {
     transform: translateY(0);
@@ -773,4 +773,30 @@ footer{
     left: 50% !important;
     transform: translateX(-50%);
   }
+}
+
+.mdsTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 0;
+}
+.tagwrap {
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 10px;
+  align-self: stretch;
+  flex-wrap: nowrap;
+}
+.tagitem {
+  height: 40px;
+  width: auto;
+  padding: 0 20px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 100px;
+  border: 2px solid #888;
+  white-space: nowrap;
 }
