--- a/src/style.scss
+++ b/src/style.scss
@@ -531,15 +531,15 @@ header {
   }
 }
 
-
-footer{
+footer {
   width: 100%;
   min-height: 21.875rem;
   padding: 2.725rem 0;
   gap: 3.125rem;
-  justify-content: center;
+  display: flex; // Flexbox로 중앙 정렬
   flex-direction: column;
-  background-color: #214AEE;
+  justify-content: center;
+  background-color: #214aee;
   color: #fff;
 
   div {
@@ -551,36 +551,45 @@ footer{
       h3 {
         margin-bottom: 10px;
       }
-      span{
+      span {
         margin-top: 5px;
       }
     }
   }
-  @media (max-width: 991px){
-      h1{
-        order: 4;
-      }
+
+  @media (max-width: 991px) {
+    h1 {
+      order: 4;
+    }
   }
-  a.linkIcon{
+
+  a.linkIcon {
     transition: 0.3s ease-out;
 
-    &:hover{
+    &:hover {
       opacity: 0.7;
     }
   }
+
+  .cslink:hover{
+      text-decoration: underline;
+  }
 }
 
-.logo-white{
+.logo-white {
   fill: #fff !important;
 }
-.ftinfo{
+
+.ftinfo {
   display: flex;
   align-items: center;
   gap: 1.25rem;
 }
-.ftinfo-bold{
+
+.ftinfo-bold {
   font-weight: bold;
 }
+
 
 .nav-link {
   color: #666;
