--- a/src/contents/News/Event.scss
+++ b/src/contents/News/Event.scss
@@ -13,7 +13,7 @@ $text-color: #888;
 .event-row {
   border: 1px solid $border-color;
   height: 100px;
-  display: flex; // flexbox를 명시적으로 선언
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
