--- a/src/style.scss
+++ b/src/style.scss
@@ -411,27 +411,40 @@ header {
   margin-bottom: 100px;
 }
 .notyet {
-  padding: 50px 0;
+  h2 {
+    padding: 50px 0;
+  }
+  img {
+    width: 100%;
+    max-width: 500px;
+  }
 }
 .linkwrap {
   border-radius: 10px;
   overflow: hidden;
-  width: 100%;
-  height: 120px;
-  display: flex;
-  margin-top: -20px;
+  @media (max-width: 459px) {
+    flex-direction: row !important;
+  }
   a {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 50%;
-    height: 100%;
     padding-left: 80px;
     color: #333;
     font-size: 26px;
-    img {
-      width: 100%;
+    line-height: 1;
+    background-size: cover;
+    background-position: 0 50%;
+    height: 120px;
+    @media (max-width: 575px){
+      padding-left: 10px;
+      height: 80px;
+    }
+    @media (max-width: 459px) {
+      background-image: none !important;
+      padding: 0;
+      width: 50%;
     }
   }
 }
