--- a/src/style.scss
+++ b/src/style.scss
@@ -128,9 +128,10 @@ svg {
       padding: 0;
     }
     .hdtop {
-      padding-right: calc((100vw - 1320px) / 2);
+      padding-right: calc((100vw - 1320px) / 2 + var(--bs-gutter-x)* .5);
       width: 42%;
       height: 65px;
+      margin-right: 0;
       @media (max-width: 1799px) {
         width: auto;
         gap: 50px;
@@ -181,8 +182,9 @@ svg {
       }
     }
     .hdbtm {
-      padding-left: calc((100vw - 1320px) / 2);
+      padding-left: calc((100vw - 1320px) / 2 + var(--bs-gutter-x)* .5);
       width: 50%;
+      margin-left: 0;
       @media (max-width: 1699px) {
         display: none;
       }
@@ -612,180 +614,196 @@ footer{
 .detailsect {
   position: relative;
 }
-  .image-container {
+.image-container {
+  width: 100%;
+  height: 2000px;
+  overflow: hidden;
+  transition: height 0.3s ease-out;
+
+  .product-image {
     width: 100%;
-    height: 2000px;
-    overflow: hidden;
     transition: height 0.3s ease-out;
+  }
+
+  &.expanded {
+    height: max-content;
 
     .product-image {
-      width: 100%;
-      transition: height 0.3s ease-out;
-    }
-
-    &.expanded {
-      height: max-content;
-
-      .product-image {
-        height: 100%;
-      }
+      height: 100%;
     }
   }
+}
 
-  .morebtn {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+.morebtn {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  height: 45px;
+  padding: 0 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 100px;
+  border: 3px solid #214AEE;
+  background: #FFF;
+}
+
+.bestReviewcont {
+  display: flex;
+  padding: 25px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 10px;
+  border: 2px solid #214AEE;
+  width: 100%;
+  .contTop {
     display: flex;
-    height: 45px;
-    padding: 0 20px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
-    flex-shrink: 0;
-    border-radius: 100px;
-    border: 3px solid #214AEE;
-    background: #FFF;
-  }
-
-  .bestReviewcont {
-    display: flex;
-    padding: 25px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 10px;
-    border: 2px solid #214AEE;
-    width: 100%;
-    .contTop {
+    align-self: stretch;
+    .bestreviewbadge {
       display: flex;
-      justify-content: space-between;
+      height: 20px;
+      min-width: 85px;
+      padding: 0 20px;
+      justify-content: center;
       align-items: center;
-      align-self: stretch;
-      .bestreviewbadge {
-        display: flex;
-        height: 20px;
-        min-width: 85px;
-        padding: 0 20px;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        gap: 10px;
-        border-radius: 100px;
-        background: #FF4A11;
-        color: #fff;
-        line-height: 1;
-        font-size: 18px;
-        font-weight: 500;
-        }
-    }
-    .contBot {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      align-content: flex-start;
-      flex-wrap: wrap;
-      align-self: stretch;
-      img{
-        width: 170px;
-        height: 170px;
-        background-color: #d2d2d2;
+      text-align: center;
+      gap: 10px;
+      border-radius: 100px;
+      background: #FF4A11;
+      color: #fff;
+      line-height: 1;
+      font-size: 18px;
+      font-weight: 500;
       }
-      ul {
-        text-align: left;
-        // width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-self: stretch;
-        color: #AAA;
-        font-family: Pretendard;
-        font-size: 18px;
-        font-weight: 500;
-        li:nth-child(2) {
-          color: #666;
-          text-align: justify;
-          display: block;
-          display: -webkit-box;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 4;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          line-height: 1.2;
-          max-height: calc(1.2em * 4);
-          
-          box-orient: vertical;
-          line-clamp: 4;
-        }
-      }
-    }
   }
-
-.swiper-wrapper {
-  position: relative;
-}
-
-.swiper-pagination {
-  display: grid;
-  height: 300px;
-  background: rgba(255, 255, 255, 0.5);
-  width: auto !important;
-  top: 50% !important;
-  left: calc((100vw - 1320px) / 4) !important;
-  transform: translate(-50%, -50%);
-  bottom: unset !important;
-  border-radius: 1.25rem;
-  overflow: hidden;
-  backdrop-filter: blur(10px);
-  @media (max-width: 991px) {
-    display: none !important;
-  }
-}
-
-.swiper-pagination-bullet {
-  width: 150px;
-  height: 100%;
-  text-align: center;
-  color: #333;
-  opacity: 0.8;
-  background: transparent;
-  border-radius: 0;
-  margin: 0 !important;
-  font-size: 12px;
-  font-weight: 300;
-  line-height: 42px;
-  user-select: none;
-  @media (max-width: 1149px) {
-    width: 120px;
-  }
-}
-
-.swiper-pagination-bullet-active {
-  color: #fff;
-  background: #214AEE;
-  opacity: 1;
-  font-size: 14px;
-  font-weight: normal;
-}
-
-@media (max-width: 1800px) {
-  .swiper-pagination {
+  .contBot {
     display: flex;
-    height: auto;
-    top: unset !important;
-    bottom: 0.5rem !important;
-    left: 50% !important;
-    transform: translateX(-50%);
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    align-self: stretch;
+    img{
+      width: 170px;
+      height: 170px;
+      background-color: #d2d2d2;
+    }
+    ul {
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-self: stretch;
+      color: #AAA;
+      font-family: Pretendard;
+      font-size: 18px;
+      font-weight: 500;
+      li:nth-child(2) {
+        color: #666;
+        text-align: justify;
+        display: block;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 4;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        line-height: 1.2;
+        max-height: calc(1.2em * 4);
+        
+        box-orient: vertical;
+        line-clamp: 4;
+      }
+    }
   }
 }
+
+.mainvisual {
+
+  .swiper-wrapper {
+    position: relative;
+  }
+  
+  .swiper-pagination {
+    display: grid;
+    height: 300px;
+    background: rgba(255, 255, 255, 0.5);
+    width: auto !important;
+    top: 50% !important;
+    left: calc((100vw - 1320px) / 4) !important;
+    transform: translate(-50%, -50%);
+    bottom: unset !important;
+    border-radius: 1.25rem;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    @media (max-width: 991px) {
+      display: none !important;
+    }
+  }
+  
+  .swiper-pagination-bullet {
+    width: 150px;
+    height: 100%;
+    text-align: center;
+    color: #333;
+    opacity: 0.8;
+    background: transparent;
+    border-radius: 0;
+    margin: 0 !important;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 42px;
+    user-select: none;
+    @media (max-width: 1149px) {
+      width: 120px;
+    }
+  }
+  
+  .swiper-pagination-bullet-active {
+    color: #fff;
+    background: #214AEE;
+    opacity: 1;
+    font-size: 14px;
+    font-weight: normal;
+  }
+  
+  @media (max-width: 1800px) {
+    .swiper-pagination {
+      display: flex;
+      height: auto;
+      top: unset !important;
+      bottom: 0.5rem !important;
+      left: 50% !important;
+      transform: translateX(-50%);
+    }
+  }
+}
+
 
 .mdsTitle {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: stretch;
   gap: 20px;
   padding: 0;
+  padding-right: 84px;
+  background-color: #fff;
+  z-index: 100;
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    background-color: #fff;
+  }
 }
 .tagwrap {
   display: flex;
@@ -796,14 +814,18 @@ footer{
   flex-wrap: nowrap;
 }
 .tagitem {
+  color: #666;
   height: 40px;
   width: auto;
   padding: 0 20px;
   text-align: center;
-  line-height: 40px;
+  line-height: 1;
   border-radius: 100px;
-  border: 2px solid #888;
+  border: 2px solid #ccc;
   white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .noticelist {
@@ -910,4 +932,28 @@ footer{
   &:hover {
     text-decoration: underline;
   }
+}
+
+.mdspickcont {
+  align-self: flex-start;
+  width: 100%;
+  .swiper-slide-next {
+    opacity: .5;
+    filter: blur(3px);
+  }
+  .swiper-initialized {
+    overflow: visible;
+  }
+  button {
+    background: none;
+    border: none;
+  }
+  span {
+    margin: 0 1rem;
+  }
+}
+
+.boardlist {
+  margin-top: 150px;
+  gap: 150px;
 }
