--- a/src/contents/News/Event.scss
+++ b/src/contents/News/Event.scss
@@ -10,9 +10,16 @@ $text-color: #888;
   padding: $padding-large 0;
 }
 
+.event-img{
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  object-position: center;
+}
+
 .event-row {
   border: 1px solid $border-color;
-  height: 100px;
+  height: 9.26vh;
   display: flex;
   flex-direction: column;
   align-items: center;
