--- a/src/style.scss
+++ b/src/style.scss
@@ -13,8 +13,12 @@ html, body {
   height: 100vh;
 }
 
+body {
+  padding-top: 202px;
+}
+
 .mycontainer {
-  padding: 50px 0 0;
+  padding-top: 50px;
 }
 section {
   padding: 50px 0;
@@ -380,9 +384,6 @@ header {
   p {
     margin: 0;
   }
-}
-.whitespace {
-  height: 202px;
 }
 
 .prodimg {
@@ -1047,5 +1048,40 @@ footer {
   gap: 20px;
   .prodimg {
     aspect-ratio: 1.4;
+  }
+}
+
+.signupform {
+  form {
+    gap: 10px;
+  }
+  .formRow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .InputArea {
+      width: 450px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 10px;
+      label {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 5px;
+        line-height: 1;
+      }
+    }
+    input {
+      border: 1px solid #D2D2D2;
+      height: 40px;
+      border-radius: 0.3125rem;
+    }
+    select {
+      border: 1px solid #D2D2D2;
+      height: 40px;
+      border-radius: 0.3125rem;
+    }
   }
 }
