--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,12 @@ html, body {
 
 body {
   padding-top: 202px;
+  @media (max-width: 991px){
+    padding-top: 97px;
+  }
+  @media (max-width: 575px){
+    padding-top: 60px;
+  }
 }
 
 .mycontainer {
@@ -116,7 +122,7 @@ svg {
     @media (max-width: 1699px) {
       flex-direction: unset;
       justify-content: space-between;
-      padding: 0 150px;
+      padding: 0 calc((100vw - 1320px) / 2);
     }
     @media (max-width: 991px) {
       flex-direction: row;
@@ -127,12 +133,13 @@ svg {
     }
     .hdtop {
       padding-right: calc((100vw - 1320px) / 2 + var(--bs-gutter-x)* .5);
-      width: 42%;
+      width: 45%;
       height: 65px;
       margin-right: 0;
       @media (max-width: 1799px) {
         width: auto;
         gap: 50px;
+        margin: 0;
       }
       @media (max-width: 1699px) {
         padding-right: calc(1.5rem* .5);
@@ -143,6 +150,7 @@ svg {
         width: 100%;
         height: 60px;
         gap: unset;
+        margin-left: 0;
       }
       h1 {
         position: absolute;
@@ -151,7 +159,11 @@ svg {
         transform: translateY(-50%);
         width: calc((100% - 1320px) / 2);
         text-align: center;
+        @media (max-width: 1799px) {
+          display: none;
+        }
         @media (max-width: 1699px) {
+          display: block;
           position: unset;
           transform: none;
           width: auto;
@@ -172,7 +184,7 @@ svg {
         }
       }
       .search-box {
-        width: 234px;
+        width: 50%;
         @media (max-width: 1699px) {
           width: 500px;
           max-width: 500px;
@@ -220,9 +232,6 @@ svg {
         justify-content: center;
         align-items: center;
         @media (max-width: 1799px) {
-          justify-content: flex-start;
-        }
-        @media (max-width: 1699px) {
           display: none;
         }
       }
@@ -240,10 +249,13 @@ header {
   background-color: #fff;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.15);
   @media (max-width: 991px){
-    height: 60px;
+    height: 97px;
     svg{
       height: 40px;
     }
+  }
+  @media (max-width: 575px){
+    height: 60px;
   }
   .hdtop {
     height: 100px;
@@ -378,7 +390,7 @@ header {
   justify-content: center;
   align-items: center;
 
-  @media (max-width: 991px) {
+  @media (max-width: 575px) {
     display: none;
   }
   p {
@@ -754,6 +766,9 @@ footer {
 
 .mainvisual {
 
+  .swiper-slide img {
+    width: 100%;
+  }
   .swiper-wrapper {
     position: relative;
   }
@@ -833,9 +848,17 @@ footer {
     left: -100%;
     background-color: #fff;
   }
+  .maintitle:after{
+      content: '';
+      display: inline-block;
+      width: 34px;
+      height: 34px;
+      margin-left: 5px;
+      transform: translateY(4px);
+      background: url(../public/assets/img/maintitle/thumsup.png);
+    }
 }
 .tagwrap {
-  display: flex;
   align-items: flex-start;
   align-content: flex-start;
   gap: 10px;
@@ -999,6 +1022,9 @@ footer {
   }
   .swiper-initialized {
     overflow: visible;
+    @media (max-width: 991px){
+      margin-top: 50px;
+    }
   }
   button {
     background: none;
@@ -1007,21 +1033,46 @@ footer {
   span {
     margin: 0 1rem;
   }
+  .mdswiper{
+    width: 615px;
+    @media (max-width: 575px) {
+      width: 80vw;
+      margin-left: -0.75rem;
+      .swiper-slide img {
+        border-radius: 0;
+        width: 100%;
+      }
+    }
+  }
 }
 
 .boardlist {
   margin-top: 150px;
   gap: 150px;
+  @media (max-width: 991px) {
+    margin-top: 80px;
+    gap: 80px;
+  }
+  @media (max-width: 575px) {
+    margin-top: 50px;
+    gap: 50px;
+  }
 }
 
 .mapbanner {
   position: relative;
   height: 400px;
+  @media (max-width: 575px){
+    height: 300px;
+  }
   img {
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
+    @media (min-width: 576px) and (max-width: 941px){
+      transform: translateX(-46%);
+    }
   }
   .maptext {
     display: flex;
@@ -1034,20 +1085,41 @@ footer {
     h6 {
       color: #666;
       font-size: 22px;
-      font-weight: 600;
+      font-weight: 500;
     }
     p {
       color: #888;
       font-size: 16px;
-      font-weight: 500;
-      line-height: 130%;
+      font-weight: 300;
+      line-height: 135%;
     }
   }
 }
 .livecomCont {
-  gap: 20px;
+  .maintitle:after{
+    content: '';
+    display: inline-block;
+    width: 34px;
+    height: 34px;
+    margin-left: 4px;
+    transform: translateY(4px);
+    background: url(../public/assets/img/maintitle/movie.png);
+  }
+  .prodwrap {
+    row-gap: 20px;
+  }
   .prodimg {
-    aspect-ratio: 1.4;
+    aspect-ratio: 1.3;
+  }
+}
+.liveimg {
+  background: url(../public/assets/img/live.jpg) center no-repeat;
+  background-size: cover;
+  border-radius: 0.3125rem;
+  height: 100%;
+  @media (max-width: 991px){
+    height: 400px;
+    margin-bottom: 20px;
   }
 }
 
@@ -1084,4 +1156,80 @@ footer {
       border-radius: 0.3125rem;
     }
   }
+}
+.mainreviewwrap {
+  margin-bottom: 150px;
+  .swiper-slide {
+    height: auto;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: max-content;
+    .prodimg {
+      aspect-ratio: 1;
+    }
+    .rating {
+      gap: 7px;
+      span {
+        line-height: 1;
+        color: #FF4A11;
+        font-family: Pretendard;
+        font-size: 16px;
+        font-weight: 500;
+        margin-bottom: -2px;
+      }
+    }
+    .reviewWrap {
+      height: 170px;
+      gap: 10px;
+      .minireview {
+        display: flex;
+        align-items: flex-start;
+        gap: 10px;
+        width: 100%;
+        img {
+          border-radius: 0.3125rem;
+        }
+        p {
+          width: 100%;
+          text-align: justify;
+          word-break: break-all;
+          color: #666;
+          display: block;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 3;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          line-height: 1.2;
+          max-height: calc(1.2em * 3);
+          
+          box-orient: vertical;
+          line-clamp: 3;
+        }
+      }
+    }
+  }
+}
+.bestprod{
+  .maintitle:after{
+    content: '';
+    display: inline-block;
+    width: 34px;
+    height: 34px;
+    margin-left: 5px;
+    transform: translateY(4px);
+    background: url(../public/assets/img/maintitle/cart.png);
+  }
+}
+
+.reviewCont .maintitle:after{
+  content: '';
+  display: inline-block;
+  width: 34px;
+  height: 34px;
+  margin-left: 4px;
+  transform: translateY(4px);
+  background: url(../public/assets/img/maintitle/sparkle.png);
 }
