지도 api 우회 추가, 상가리스트 클릭 시 마킹 및 이동 추가

--- a/src/style.scss
+++ b/src/style.scss
@@ -546,23 +546,19 @@ header {
 
 footer {
   width: 100%;
-  min-height: 21.875rem;
   padding: 2.725rem 0;
-  gap: 3.125rem;
-  display: flex; // Flexbox로 중앙 정렬
   flex-direction: column;
   justify-content: center;
   background-color: #214aee;
   color: #fff;
 
   div {
-    h3 {
-      margin-bottom: 10px;
+    h4 {
+      margin-bottom: 1.25rem;
     }
-
     &:nth-child(3) {
-      h3 {
-        margin-bottom: 10px;
+      h4 {
+        margin-bottom: .6rem;
       }
       span {
         margin-top: 5px;
@@ -588,17 +584,14 @@ footer {
       text-decoration: underline;
   }
 }
-
 .logo-white {
   fill: #fff !important;
 }
-
 .ftinfo {
   display: flex;
   align-items: center;
   gap: 1.25rem;
 }
-
 .ftinfo-bold {
   font-weight: bold;
 }
@@ -949,6 +942,16 @@ footer {
     width: 100%;
     &:focus, &:focus-visible {
       outline: none;
+    }
+  }
+}
+
+.storelistBox {
+  .storebox {
+    border-bottom: 1px solid #D2D2D2;  // 기본적으로 모든 div에 border-bottom 적용
+
+    &:last-child {
+      border-bottom: none;  // 마지막 div의 border-bottom 없애기
     }
   }
 }
