--- a/src/contents/Coupon.scss
+++ b/src/contents/Coupon.scss
@@ -1,23 +1,21 @@
-.card-title {
+.card-body {
+  border-radius: 5px;
+}
+
+.card-body .card-title {
+  font-size: 1.625rem;
   font-weight: bold;
   display: inline-block;
   margin-right: 10px;
   padding: 1.25rem 0;
 }
 
-.card-text {
+.card-body .card-text {
+  font-size: 1.375rem;
   color: #666;
 }
 
-.card-body {
-  border: 2px solid #214aee;
-  border-radius: 5px;
-}
 
-.img-fluid {
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-}
 
 .container .button-common {
   width: 100%;
@@ -25,7 +23,7 @@
   background-color: #fff;
   border: 2px solid #214aee;
   color: #333;
-  font-size: 0.9rem;
+  font-size: 1.25rem;
   padding: 0.625rem 1.25rem;
   border-radius: 5px;
 
@@ -36,11 +34,11 @@
 }
 
 /* 버튼 숨기기/보이기 */
-.container  .button-toggle {
+.container .button-toggle {
   color: #666;
   display: flex;
   align-items: center;
-  font-size: 0.9rem;
+  font-size: 1rem;
   text-decoration: none;
   padding: 0;
 
@@ -58,13 +56,11 @@
   &.active i {
     transform: rotate(90deg);
   }
-
-  
 }
 
 /* 쿠폰 안내 내용 */
 .box-notice {
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin-top: 1.25rem;
 
   .box-notice__fence {
@@ -98,23 +94,65 @@
 
 /* 모달 */
 .modal-header .modal-title {
-  font-size: 1.25rem;
+  font-size: 1.325rem;
+  font-weight: bold;
 }
 
 .modal-body {
-  font-size: 0.95rem;
+  font-size: 1rem;
   text-align: center;
 }
 
 .modal-footer .btn-secondary {
-  background-color: #214aee;
-  color: #fff;
+  border: 2px solid #214aee;
+  background-color: #fff;
+  color: #333;
   font-size: 0.9rem;
   padding: 0.625rem 1.5rem;
   border-radius: 5px;
+
+  &.btn:hover {
+    border: 2px solid #214aee;
+    background-color: #214aee;
+    color: #fff;
+  }
 }
 
 body.modal-open {
   overflow: visible !important;
   padding-right: 0px !important;
 }
+
+/* 랜덤쿠폰 */
+.custom-list {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.custom-list li {
+  margin-bottom: 0.5rem;
+  font-size: 0.85rem;
+  color: #333;
+}
+
+
+
+
+/* 스타일 통합 및 추가 */
+.container .button-common {
+  width: 100%;
+  margin-top: 1.25rem;
+  background-color: #fff;
+  border: 2px solid #214aee;
+  color: #333;
+  font-size: 1.25rem;
+  padding: 0.625rem 1.25rem;
+  border-radius: 5px;
+
+  &:hover {
+    background-color: #214aee;
+    color: #fff;
+  }
+}
+
