--- a/src/style.scss
+++ b/src/style.scss
@@ -97,7 +97,7 @@ svg {
 }
 
 .border-lighter {
-  border-width: 2px !important;
+  border-width: 1px !important;
 }
 
 .border-none {
@@ -513,8 +513,9 @@ header {
 }
 
 .tempimg {
-  width: 572px;
-  height: 572px;
+  max-width: 572px;
+  width: 100%;
+  max-height: 572px;
   background-color: #bd822a;
 }
 .totalQuan {
@@ -525,15 +526,79 @@ header {
 }
 
 .detailInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #D2D2D2;
   li:nth-child(1) {
-    color: #AAA;
-    font-size: 18px;
-    font-weight: 500;
+    gap: 15px;
+    div {
+      display: flex;
+      align-items: center;
+      gap: 3px;
+      color: #AAA;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 1;
+      svg {
+        height: 13px;
+      }
+    }
+    h3 {
+      color: #333;
+      font-size: 26px;
+      font-weight: 700;
+      line-height: 1.2;
+    }
   }
   li:nth-child(2) {
-    color: #333;
-    font-size: 26px;
-    font-weight: 700;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    .average-rating {
+      display: flex;
+      gap: 3px;
+      color: #FF4A11;
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 1;
+    }
+    .totalReview {
+      display: flex;
+      align-items: center;
+      gap: 3px;
+      color: #aaa;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 1;
+      svg {
+        height: 14px;
+      }
+    }
+  }
+  .minorinfo {
+    gap: 20px;
+    dl {
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      gap: 30px;
+      dt {
+        color: #888;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1;
+        width: 70px;
+      }
+      dd {
+        color: #888;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1;
+      }
+    }
   }
 }
 
@@ -575,7 +640,7 @@ footer {
   min-height: 21.875rem;
   padding: 2.725rem 0;
   gap: 3.125rem;
-  display: flex; // Flexbox로 중앙 정렬
+  display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: #214aee;
@@ -629,29 +694,93 @@ footer {
   font-weight: bold;
 }
 
-
-.nav-link {
-  color: #666;
-  font-weight: 500;
-  font-size: 22px;
-  height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 2px solid #d2d2d2;
-  &.active {
-    color: #333;
-    font-weight: 700;
-    border-bottom: 3px solid #214AEE;
-  }
-}
-
 .prodInfoDetail {
   @media (max-width: 1199px){
     flex-direction: column;
   }
+  form {
+    gap: 30px;
+    select {
+      border: 1px solid #D2D2D2;
+      border-radius: 0.3125rem;
+      padding: 0 15px;
+      width: 300px;
+      height: 50px;
+      color: #666;
+      &:focus, &:focus-visible {
+        outline-width: 1px;
+        outline-color: #214AEE;
+      }
+      option {
+        padding: 10px 13px;
+        color: #666;
+      }
+    }
+    .decision {
+      background-color: #F3F3F3;
+      border-radius: 0.3125rem;
+      padding: 20px;
+      gap: 30px;
+      p {
+        color: #666;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 1;
+      }
+    }
+    .submitBtn {
+      gap: 10px;
+      &>button:hover svg path {
+            fill: #fff;
+      }
+      &>div{
+        width: calc(100% - 10px - 60px);
+        gap: 10px;
+        button:first-child {
+          color: #666;
+          width: 50%;
+          font-weight: 500;
+          &:hover {
+            color: #fff;
+          }
+        }
+        button:nth-child(2) {
+          width: 50%;
+          font-weight: 500;
+          border: 1px solid #214AEE !important;
+        }
+      }
+    }
+  }
 }
-
+.detailcont {
+  .relatedProd {
+    padding-top: 60px;
+    overflow-x: overlay;
+  }
+  .stickynavbar {
+    top: 65px;
+    z-index: 100;
+    .nav-link {
+      color: #666;
+      font-weight: 500;
+      font-size: 22px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom: 2px solid #d2d2d2;
+      padding: 10px 0;
+      &.active {
+        color: #333;
+        font-weight: 700;
+        border-bottom: 3px solid #214AEE;
+      }
+    }
+    @media (max-width: 991px){
+      top: 60px;
+    }
+  }
+}
 .detailsect {
   position: relative;
 }
@@ -694,21 +823,29 @@ footer {
 
 .bestReviewcont {
   display: flex;
-  padding: 25px;
+  padding: 30px 25px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 10px;
-  border-radius: 10px;
-  border: 2px solid #214AEE;
+  gap: 15px;
+  border-radius: 0.9375rem;
   width: 100%;
+  background-color: #F3F3F3;
   .contTop {
     display: flex;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
+    .userid {
+      text-align: left;
+      color: #AAA;
+      font-family: Pretendard;
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 1;
+    }
     .bestreviewbadge {
       display: flex;
-      height: 20px;
+      height: 23px;
       min-width: 85px;
       padding: 0 20px;
       justify-content: center;
@@ -718,10 +855,12 @@ footer {
       border-radius: 100px;
       background: #FF4A11;
       color: #fff;
-      line-height: 1;
       font-size: 18px;
       font-weight: 500;
-      }
+    }
+    &>div {
+      gap: 10px;
+    }
   }
   .contBot {
     display: flex;
@@ -745,20 +884,20 @@ footer {
       font-family: Pretendard;
       font-size: 18px;
       font-weight: 500;
-      li:nth-child(2) {
+      li:nth-child(1) {
         color: #666;
         text-align: justify;
         display: block;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 4;
+        -webkit-line-clamp: 3;
         text-overflow: ellipsis;
         overflow: hidden;
         line-height: 1.2;
-        max-height: calc(1.2em * 4);
+        max-height: calc(1.2em * 3);
         
         box-orient: vertical;
-        line-clamp: 4;
+        line-clamp: 3;
       }
     }
   }
@@ -1232,4 +1371,57 @@ footer {
   margin-left: 4px;
   transform: translateY(4px);
   background: url(../public/assets/img/maintitle/sparkle.png);
+}
+
+.quantityCont {
+  .quantity-counter {
+    background-color: #fff;
+    border: 1px solid #214AEE;
+    border-radius: 0.1875rem;
+    width: 90px;
+    button {
+      width: 30px;
+      height: 30px;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      color: #214AEE;
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 1;
+      &.disabled {
+        color: #D2D2D2;
+      }
+    }
+    span {
+      color: #214AEE;
+      font-size: 22px;
+      font-weight: 600;
+      line-height: 1;
+    }
+  }
+  .total-price {
+    gap: 10px;
+    .original-price {
+      color: #AAA;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1;
+      text-decoration: line-through;
+    }
+    .sale-price {
+      color: #333;
+      font-size: 26px;
+      font-weight: 700;
+      line-height: 1;
+      span {
+        color: #333;
+        font-size: 26px;
+        font-weight: 500;
+        line-height: 1;
+      }
+    }
+  }
 }
