--- a/src/module.scss
+++ b/src/module.scss
@@ -4,8 +4,19 @@
   justify-content: start;
   gap: 10px;
   width: 500px;
-  height: 45px;
+  height: 40px;
   padding: 2px 15px;
   border-radius: 30px;
-  border: 3px solid #214aee;
+  border: 2px solid #214aee;
+
+  input {
+    font-size: 16px;
+    color: #333;
+  }
+
+  input::placeholder {
+    opacity: 0.5;
+    font-size: 14px;
+  }
+  
 }
