--- a/src/style.scss
+++ b/src/style.scss
@@ -656,10 +656,10 @@ footer {
         margin-top: 5px;
       }
     }
-    dl{
-      // dt{color: red;}
-      // dd{color: yellowgreen;}
-    }
+    // dl{
+    //   dt{color: red;}
+    //   dd{color: yellowgreen;}
+    // }
   }
 
   @media (max-width: 991px) {
